--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '27.0.3'
     useLibrary  'org.apache.http.legacy'
 
     defaultConfig {
@@ -22,24 +22,24 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     //compile(name:'libs/estimote-sdk', ext:'aar')
 
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.estimote:sdk:0.10.0@aar'
+    implementation 'com.android.support:design:23.2.1'
+    implementation 'com.android.support:recyclerview-v7:23.0.+'
+    implementation 'com.android.support:appcompat-v7:23.0.1'
+    implementation 'com.estimote:sdk:0.10.0@aar'
 
-    compile 'com.google.code.gson:gson:2.3.1'
+    implementation 'com.google.code.gson:gson:2.3.1'
     //Apache
-    compile "cz.msebera.android:httpclient:4.4.1.1"
+    implementation "cz.msebera.android:httpclient:4.4.1.1"
     //Geofence
-    compile 'com.google.android.gms:play-services-location:6.5.87'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.google.android.gms:play-services-location:6.5.87'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //Estimotes
-    compile 'com.estimote:sdk:0.9.4@aar'
+    implementation 'com.estimote:sdk:0.9.4@aar'
     //Empatica
-    compile 'com.empatica.empalink:empalink:2.1@aar'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.empatica.empalink:empalink:2.1@aar'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
 
 }
